# pickasso_navigation_stack

./: CMakeLists.txt  LICENSE  README.md  package.xml
auto_mapping/maps/: office_map.pgm  office_map.yaml
auto_mapping/scripts/: auto_map.py
launch/: auto_mapping.launch  navigation.launch  simulation_world.launch
maps/: office_map.yaml
param/: dwa_local_planner_params.yaml
worlds/: pickasso_office.world
